@@ -1,6 +1,6 @@
 ver 3.3.9
 * Support DEC Locator mode except filter rectangle.
-* Support CSI > 2 p.
+* Add CSI > 4 p (for QEMU-Sixel) which always hides mouse pointer even if it is moved.
 * Change the default mouse pointer on a mlterm window from IDC_ARROW to IDC_IBEAM
   on win32.
 
