@@ -1,3 +1,9 @@
+2014-09-03  Araki Ken  <arakiken@users.sf.net>
+
+	* mlterm/ml_vt100_parser.c:
+	  - OSC>2p => OSC>4p
+	  - show_picture() moves cursor in showing animation frames.
+
 2014-09-02  Araki Ken  <arakiken@users.sf.net>
 
 	* win32/x_display.h: Added.
